--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "echo \"{\n\t\\\"\"client_id\\\"\": \\\"\"appId\\\"\",\n\t\\\"\"access_token\\\"\": \\\"\"\\\"\"\n}\" > config/config.json "
   },
   "author": "",
   "license": "ISC",
