--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.2",
     "body-parser": "^1.17.1",
     "request": "^2.81.0",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta11",
+    "url": "^0.11.0"
   }
 }
